adjust stylings of default layout and dropdown nav to avoid whitespace at bottom of short pages etc

--- a/_sass/kroxylicious.scss
+++ b/_sass/kroxylicious.scss
@@ -42,6 +42,10 @@ a {
   color: $kroxy-dark-green;
 }
 
+.nav-item > .dropdown-menu {
+  min-width: 200px;
+}
+
 .krx-content * {
   scroll-margin-top: 5rem!important;
 }
